# WestfallPersonalAssistant

./: .env.example  .gitignore  .pylintrc  =0.2.90  =2.1.0  =3.0.0  =5.15.0  ACCESSIBILITY_SECURITY.md  App.axaml  App.axaml.cs  COMPLETE_FIX_AND_ENHANCEMENT.md  COMPLETE_IMPLEMENTATION_GUIDE.md  DEMO.py  DEVELOPMENT.md  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  FINAL_PERFECTION_SCRIPT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SCRIPT.md  IMPLEMENTATION_SUMMARY.md  MASTER_BUSINESS_ENHANCEMENTS.md  MASTER_PLAN_REMAINING_WORK.md  MainWindow.axaml  MainWindow.axaml.cs  PHASE_1_IMPLEMENTATION_COMPLETE.md  PROGRESS_IMPLEMENTATION.md  PlatformTest.cs  Program.cs  QUICKSTART.md  README.md  SECURITY_IMPLEMENTATION.md  SOLO_DEVELOPER_FEATURES_SUMMARY.md  START_HERE.md  WestfallPersonalAssistant-main.sln  WestfallPersonalAssistant.csproj  app.py  build-portable.sh  check_modules.py  demo-cross-platform.sh  demo.html  demo_advanced_features.py  (+56 more)
Demo/: Program.cs
backend/: ai_integration.py  alembic.ini  dependency_manager.py  logging_system.py  memory_management.py  model_handler.py  platform_compatibility.py  pyinstaller.spec  pyproject.toml  requirements-minimal.txt  requirements.txt  screen_capture.py  server.py  simple_server.py  state_management.py
backend/ai_assistant/: __init__.py
backend/database/: __init__.py  backup_manager.py  migration_system.py  models.py  sync_manager.py
backend/features/: __init__.py  advanced_calculator.py  browser_manager.py  music_player.py  navigation_system.py  news_reader.py  notification_manager.py  shortcuts_manager.py
backend/migrations/: env.py
backend/security/: __init__.py  api_key_vault.py  auth_manager.py  encryption.py  input_validation.py  model_security.py  secure_storage.py
backend/tests/: test_smoke.py
backend/utils/: __init__.py  error_handler.py  network.py  safe_delete.py  validation.py
backend/westfall_backend/: __init__.py  app.py
(+360 files in other folders)
